# sem3lab1

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  meson.build  native.conf
include/: array_list.hpp  geometry.hpp  linked_list.hpp  list.hpp  sort.hpp
src/: array_list.cpp  main.cpp
